k8s/Ingress Controller/k8s-ingress-config.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-salesmodule
  namespace: test
  annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/rewrite-target: /
   nginx.ingress.kubernetes.io/add-base-url : "true"
spec:
  rules:
  - http: 
      paths:
      - path: 
        backend:
          serviceName: catalog-api-service
          servicePort: 80
        path: /catalog
      - path: 
        backend:
          serviceName: catalog-api-service-2
          servicePort: 80
        path: /test
